<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="launch_logo_description">Cover Logo</string>
    <string name="launch_upcoming_elections">Upcoming elections</string>
    <string name="launch_find_my_representatives">Find my representatives</string>

    <string name="representative_use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="representative_address_line_1">Address Line 1</string>
    <string name="representative_address_line_2">Address Line 2</string>
    <string name="representative_city">City</string>
    <string name="representative_zip">Zip</string>
    <string name="representative_my_representatives">My Representatives</string>
    <string name="representative_find_my_representatives">Find My Representatives</string>

    <string name="corresponding_address">Corresponding Address</string>
    <string name="state_information">State Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>

    <string name="btn_text_follow">Follow Election</string>
    <string name="btn_text_unfollow">Unfollow Election</string>
</resources>
